footer is added

--- a/project5/index.html
+++ b/project5/index.html
@@ -92,5 +92,39 @@
         </div>
       </div>
     </div>
+    <footer class="foot-section">
+      <div class="footer-container container">
+        <div class="logo"><img src="images/logo.png" alt="company logo" /></div>
+        <div class="main-links">
+          <h3>Main Links</h3>
+          <ul>
+            <li>Order Tracking</li>
+            <li>New Order</li>
+            <li>Contact us</li>
+            <li>News and blogs</li>
+          </ul>
+        </div>
+        <div class="support">
+          <h3>Support</h3>
+          <ul>
+            <li>About us</li>
+            <li>Privacy policy</li>
+            <li>Terms & conditions</li>
+          </ul>
+        </div>
+        <div class="news-letter">
+          <h3>Subscribe to our news letter</h3>
+          <input type="email" placeholder="Enter your mailId" />
+          <h3>Follow us</h3>
+          <div class="social-media">
+            <div class="icon"><i class="fa-brands fa-square-facebook"></i></div>
+            <div class="icon"><i class="fa-brands fa-square-twitter"></i></div>
+            <div class="icon">
+              <i class="fa-brands fa-square-instagram"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
