image gallery grid elements

--- a/FlexBox/FullScreen hover effect/index.html
+++ b/FlexBox/FullScreen hover effect/index.html
@@ -46,19 +46,19 @@
         box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.33);
       }
       .flex-container .flex-item:nth-child(1) {
-        background: url(img1.jpg);
+        background: url(./images/img1.jpg);
       }
       .flex-container .flex-item:nth-child(2) {
-        background: url(img2.jpg);
+        background: url(./images/img2.jpg);
       }
       .flex-container .flex-item:nth-child(3) {
-        background: url(img3.jpg);
+        background: url(./images/img3.jpg);
       }
       .flex-container .flex-item:nth-child(4) {
-        background: url(img4.jpg);
+        background: url(./images/img4.jpg);
       }
       .flex-container .flex-item:nth-child(5) {
-        background: url(img5.jpg);
+        background: url(./images/img5.jpg);
       }
     </style>
   </head>
